fixed font size on iphone rotation

--- a/sc.css
+++ b/sc.css
@@ -232,7 +232,6 @@ p{
     width:40px;
     height:40px;
     border:none;
-    font-size: 13px;
     border-radius:50%;
     margin-left: 10px;
     cursor:pointer;
@@ -251,15 +250,18 @@ p{
 .button.black{
     color:white;
     background-color:black;
+    font-size: 11px;
 }
 
 .button.silver{
-    color:white;
+    color:black;
     background-color: #647489;
+    font-size: 13px;
 }
 .button.red{
     background-color: red;
     color:white;
+    font-size: 11px;
 }
 
 .hide{
